js/js.translator/testData/incremental/invalidation/functionTypeInterfaceWithCrossModuleInliner/lib2/l2a.3.kt
fun getString(): String {
    val s: (Any, Any, Any) -> Unit = { _, _, _ -> }
    return getTypeName(s)
}
